--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "web": "expo start --web"
   },
   "dependencies": {
+    "@react-native-masked-view/masked-view": "0.2.9",
     "@react-navigation/bottom-tabs": "^6.5.20",
     "@react-navigation/native": "^6.1.17",
     "@react-navigation/stack": "^6.3.29",
@@ -17,11 +18,11 @@
     "expo-status-bar": "~1.6.0",
     "react": "18.2.0",
     "react-native": "0.72.10",
+    "react-native-element-dropdown": "^2.10.4",
+    "react-native-gesture-handler": "~2.12.0",
     "react-native-root-siblings": "^5.0.1",
     "react-native-size-matters": "^0.4.2",
-    "react-native-vector-icons": "^10.0.3",
-    "react-native-gesture-handler": "~2.12.0",
-    "@react-native-masked-view/masked-view": "0.2.9"
+    "react-native-vector-icons": "^10.0.3"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
